docs(2025-Cyber-Tracking): 添加武汉大学性骚扰诉讼案事件追踪内容
新增关于武汉大学图书馆性骚扰诉讼案的详细时间线与关键人物介绍，
包括法院判决、校方处理结果及网络舆论反应。同时更新站点导航配置，
将“2025热点追踪”一书加入导航栏，便于读者访问。

--- a/source/site.yml
+++ b/source/site.yml
@@ -15,6 +15,8 @@ site:
   navigation:
     - title: Claude Code Guide
       uri: /books/ClaudeCode/index.html
+    - title: 2025热点追踪
+      uri: /books/2025-Cyber-Tracking/index.html
     - title: Blogs
       uri: /blogs/tech/index.html
     - title: License
