docs(ClaudeCode): 重命名ClaudeCode目录并更新相关配置
将source/books/ClaudeCode/86/README.md重命名为source/books/AI-coding/ClaudeCode/README.md,
并更新了book.yml和site.yml中的标题及路径配置, 统一使用AI Coding Guide作为新的项目名称。

--- a/source/site.yml
+++ b/source/site.yml
@@ -13,8 +13,8 @@ site:
   # set cdn path:
   cdn-path: https://cdn.jsdelivr.net/npm
   navigation:
-    - title: Claude Code Guide
-      uri: /books/ClaudeCode/index.html
+    - title: AI Coding Guide
+      uri: /books/AI-coding/index.html
     - title: 2025热点追踪
       uri: /books/2025-Cyber-Tracking/index.html
     - title: Blogs
