fix:每个readme文档都要以 # 开始，而且添加book时需要添加site.yml以及book.yml

--- a/source/site.yml
+++ b/source/site.yml
@@ -17,6 +17,8 @@ site:
       uri: /books/AI-coding/index.html
     - title: Cyber Tracking
       uri: /books/Cyber-Tracking/index.html
+    - title: SeekingComfortZone
+      uri: /books/SeekingComfortZone/index.html
     - title: Blogs
       uri: /blogs/tech/index.html
     - title: License
