feat(books): 新增 Smart Collection 书籍分类
  - 添加 MattMight 关于自我控制的文章翻译笔记
  - 添加食贫道《战后八十年》观后感

--- a/source/site.yml
+++ b/source/site.yml
@@ -19,6 +19,8 @@ site:
       uri: /books/Cyber-Tracking/index.html
     - title: SeekingComfortZone
       uri: /books/SeekingComfortZone/index.html
+    - title: Smart Collection
+      uri: /books/Smart-Collection/index.html
     - title: Blogs
       uri: /blogs/tech/index.html
     - title: License
